--- a/Angular/src/app/Webcomponent/home-page/home-page.component.css
+++ b/Angular/src/app/Webcomponent/home-page/home-page.component.css
@@ -1,5 +1,5 @@
 body{
-   background-color: #B9EDDD;
+   background-color:  #f1f6f9;
 }
 .nav-card{
     max-width: 7rem;
@@ -14,7 +14,7 @@ body{
     background-color:rgba(255,255,255,.8);
 }
 #login-dp .help-block{
-    font-size:12px    
+    font-size:12px
 }
 #login-dp .bottom{
     background-color:rgba(255,255,255,.8);
@@ -23,7 +23,7 @@ body{
     padding:14px;
 }
 #login-dp .social-buttons{
-    margin:12px 0    
+    margin:12px 0
 }
 #login-dp .social-buttons a{
     width: 49%;
@@ -37,7 +37,7 @@ body{
 }
 .btn-fb:hover{
     color: #fff;
-    background-color:#496ebc 
+    background-color:#496ebc
 }
 .btn-tw{
     color: #fff;
@@ -61,7 +61,7 @@ body{
     margin-top: 100px;
 }
 .buy-button{
-    
+
 
     display: inline-block;
     outline: none;
@@ -88,7 +88,7 @@ body{
 }
 
 .add-cart-button{
-    
+
 
     display: inline-block;
     outline: none;
