--- a/Angular/src/app/Webcomponent/home-page/home-page.component.html
+++ b/Angular/src/app/Webcomponent/home-page/home-page.component.html
@@ -5,9 +5,9 @@
   
 </head>
 <body>
-  
+
         <nav class="navbar navbar-light fixed-top bg-dark ">
-        
+
             <a class="navbar-brand text-light">Ecommerce Site</a>
             <form class="form-inline" (ngSubmit)="searcher()">
               <input (input)="searcher()" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style=" width: 425.6px;" [(ngModel)]="searchItem" [ngModelOptions]="{standalone: true}">
@@ -30,57 +30,62 @@
           
           
         </div>
-        
+
         </nav>
-        
- 
-   
-   
-    <div class="card-group " style="margin-top: 60px;padding-bottom: 10px; width: 100%;background-color:#F1F6F9;"  >
-      <div class=" col-lg-3 col-md-4 col-sm-6">
+
+
+
+
+    <div class="row" style="border-style:outset; border-color:#f3f6f9;margin-top: 3.5rem;background-color: #f1f6f9"  >
+      <div class=" col-lg-4 col-md-4 col-sm-4">
         <h1 style="padding-top: 30px;">Top Catagories</h1>
       </div>
-      <div class="row" style="display: flex;">
+      <div class="col-lg-2 col-md-2 col-sm-2 text-center" >
         <a href="#mobile" class="box-category">
-          <div class="nav-card card col-lg-3 col-md-6 col-sm-6 text-center" >
-              <img  class="card-img-top " src="..\assets\images\mobile.webp" class="card-img-top" alt="mobile" style="height: 60px;width: 60px; margin-left: 10px;">
+          <div style="max-width: 10rem;max-height: 10rem; border-radius: 15%;">
+              <img  class="" src="..\assets\images\mobile.jpg" class="card-img-top" alt="mobile" style="height: 5.5rem;width: 6rem; margin-top: 1rem">
               <div>
                 <p class="text-center">Mobile</p>
               </div>
             </div>
           </a>
+        </div>
+      <div class="col-lg-2 col-md-2 col-sm-2 text-center" >
           <a href="#laptop" class="box-category">
-            <div class="nav-card card  col-lg-3 col-md-6 col-sm-6" style="max-width: 7rem;max-height: 7rem; border-radius: 15%;">
-              <img src="..\assets\images\laptop.jpeg" class="card-img-top " alt="laptop" style="height: 60px;width: 60px; margin-left: 10px;">
+            <div style="max-width: 10rem;max-height: 10rem; border-radius: 15%;">
+              <img src="..\assets\images\laptop.jpg" class="" alt="laptop" style="height: 6rem;width: 6rem; ">
               <div>
                 <p class="text-center">Laptops</p>
               </div>
             </div>
           </a>
+      </div><div class="col-lg-2 col-md-2 col-sm-2 text-center">
           <a href="#bags" class="box-category">
-            <div class="nav-card card  col-lg-3 col-md-6 col-sm-6" style="max-width: 7rem;max-height: 7rem; border-radius: 15%;">
-              <img src="..\assets\images\bags.webp" class="card-img-top" alt="bags" style="height: 60px;width: 60px; margin-left: 10px;">
+            <div  style="max-width: 7rem;max-height: 7rem; border-radius: 15%;">
+              <img src="..\assets\images\bags.jpg" class="card-img-top" alt="bags" style="height: 6rem;width: 6rem;">
               <div>
                 <p class="text-center">Bags</p>
               </div>
             </div>
           </a>
+    </div><div  class="col-lg-2 col-md-2 col-sm-2 text-center">
           <a href="#decorators" class="box-category">
-            <div class="nav-card card  col-lg-3 col-md-6 col-sm-6" style="max-width: 7rem;max-height: 7rem;border-radius: 15%;">
-              <img src="..\assets\images\decorators.jpeg" class="card-img-top" alt="mobile" style="height: 60px;width: 60px;margin-left: 10px;">
+            <div style="max-width: 7rem;max-height: 7rem;border-radius: 15%;">
+              <img src="..\assets\images\decorators.jpg" class="card-img-top" alt="mobile" style="height: 6rem;width: 6rem; ">
               <div>
                 <p class="text-center">Decorators</p>
               </div>
             </div>
           </a>
+    </div>
       </div>
-        
-   </div>
+
+
    <div *ngIf="mobile.length!=0" class="text-center top-heading"><h1>Mobile Phones</h1></div>
    <div class="row" id="mobile" style="margin-left: 30px;margin-right: 30px;">
-     
-     <div *ngFor="let n of mobile" class="card col-lg-3 col-md-6 col-sm-12" style="width: 18rem; margin-top: 30px;  ">
-      <img src={{n.imageURL}} class="card-img-top" alt="..." onerror="this.src='../assets/images/unnamed.jpg';" style="width: 320px;height: 430px;">
+
+     <div  *ngFor="let n of mobile" class="card col-lg-3 col-md-6 col-sm-12" style="margin: 3rem;">
+      <img src={{n.imageURL}} class="card-img-top img-thumbnail" alt="..." onerror="this.src='../assets/images/unnamed.jpg';" style="width: 320px;height: 430px;">
       <div class="card-body">
         <h5 class="card-title">{{n.name}}</h5>
         <p class="card-text">{{n.description}}</p>
@@ -89,14 +94,14 @@
         <li class="list-group-item">Price:{{n.price}}</li>
         <li class="list-group-item">Quantity Left:{{n.count}}</li>
       </ul>
-     
+
       <button (click)="addToCart(n)" class="btn btn-warning" style="margin-bottom: 20px;"> <img src="..\assets\images\cartIcon.ico" alt="" style="width: 30px;height: 30px;margin-right: 30px;"> Add to cart</button>
     </div>
    </div>
    <div *ngIf="laptop.length!=0" class="text-center top-heading"><h1>Laptops</h1></div>
    <div class="row" id="laptop" style="margin-left: 30px;margin-right: 30px;">
-     
-     <div *ngFor="let n of laptop" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
+
+     <div *ngFor="let n of laptop" class="card col-lg-3 col-md-6 col-sm-12 " style="margin: 3rem;">
       <img src={{n.imageURL}} class="card-img-top" alt="..." onerror="this.src='../assets/images/unnamed.jpg';" style="width: 320px;height: 430px;">
       <div class="card-body">
         <h5 class="card-title">{{n.name}}</h5>
@@ -111,8 +116,8 @@
    </div>
    <div *ngIf="bag.length!=0" class="text-center top-heading"><h1>Bags</h1></div>
    <div class="row" id="bags" style="margin-left: 30px;margin-right: 30px;">
-     
-     <div *ngFor="let n of bag" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
+
+     <div *ngFor="let n of bag" class="card col-lg-3 col-md-6 col-sm-12 " style="margin: 3rem;">
       <img src={{n.imageURL}} class="card-img-top" alt="..." onerror="this.src='../assets/images/unnamed.jpg'" style="width: 320px;height: 430px;">
       <div class="card-body">
         <h5 class="card-title">{{n.name}}</h5>
@@ -127,8 +132,8 @@
    </div>
    <div *ngIf="decorators.length!=0" class="text-center top-heading"><h1>Decorators</h1></div>
    <div class="row" id="decorators" style="margin-left: 30px;margin-right: 30px;">
-     
-     <div *ngFor="let n of decorators" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
+
+     <div *ngFor="let n of decorators" class="card col-lg-3 col-md-6 col-sm-12 " style="margin: 3rem;">
       <img src={{n.imageURL}} class="card-img-top" alt="..." onerror="this.src='../assets/images/unnamed.jpg';" style="width: 320px;height: 430px;">
       <div class="card-body">
         <h5 class="card-title">{{n.name}}</h5>
@@ -142,8 +147,8 @@
     </div>
    </div>
 
-  
- 
-   
+
+
+
 </body>
 </html>
