--- a/Angular/src/app/Webcomponent/home-page/home-page.component.html
+++ b/Angular/src/app/Webcomponent/home-page/home-page.component.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-  
+
   <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
-  
+
 </head>
 <body>
 
@@ -19,16 +19,16 @@
         </div>
         <div *ngIf="isLoggedIn" style="color:whitesmoke;font-size: larger;">
           Welcome {{userName}} &nbsp;&nbsp;&nbsp;
-          
+
               <button *ngIf="isOwner" type="button" (click)="addProduct()" style="margin-right: 30px;" class="btn btn-outline-primary">Add Product</button>
-              
+
           <a [routerLink]="['/cart']">
             <i class="fa" style="font-size:24px; color: yellow;">&#xf07a;</i>
 <span class='badge badge-warning' id='lblCartCount'> {{cartCount}} </span>
           </a>
           <button type="button" (click)="logout()" style="margin-left: 30px;" class="btn btn-outline-danger">⬅️ Log out</button>
-          
-          
+
+
         </div>
 
         </nav>
@@ -84,7 +84,7 @@
    <div *ngIf="mobile.length!=0" class="text-center top-heading"><h1>Mobile Phones</h1></div>
    <div class="row" id="mobile" style="margin-left: 30px;margin-right: 30px;">
 
-     <div  *ngFor="let n of mobile" class="card col-lg-3 col-md-6 col-sm-12" style="margin: 3rem;">
+     <div  *ngFor="let n of mobile" class="card col-lg-3 col-md-6 col-sm-6" style="margin: 3rem;">
       <img src={{n.imageURL}} class="card-img-top img-thumbnail" alt="..." onerror="this.src='../assets/images/unnamed.jpg';" style="width: 320px;height: 430px;">
       <div class="card-body">
         <h5 class="card-title">{{n.name}}</h5>
@@ -101,8 +101,8 @@
    <div *ngIf="laptop.length!=0" class="text-center top-heading"><h1>Laptops</h1></div>
    <div class="row" id="laptop" style="margin-left: 30px;margin-right: 30px;">
 
-     <div *ngFor="let n of laptop" class="card col-lg-3 col-md-6 col-sm-12 " style="margin: 3rem;">
-      <img src={{n.imageURL}} class="card-img-top" alt="..." onerror="this.src='../assets/images/unnamed.jpg';" style="width: 320px;height: 430px;">
+     <div *ngFor="let n of laptop" class="card col-lg-3 col-md-6 col-sm-6 " style="margin: 3rem;">
+      <img src={{n.imageURL}} class="card-img-top img-thumbnail" alt="..." onerror="this.src='../assets/images/unnamed.jpg';" style="width: 320px;height: 430px;">
       <div class="card-body">
         <h5 class="card-title">{{n.name}}</h5>
         <p class="card-text">{{n.description}}</p>
@@ -117,8 +117,8 @@
    <div *ngIf="bag.length!=0" class="text-center top-heading"><h1>Bags</h1></div>
    <div class="row" id="bags" style="margin-left: 30px;margin-right: 30px;">
 
-     <div *ngFor="let n of bag" class="card col-lg-3 col-md-6 col-sm-12 " style="margin: 3rem;">
-      <img src={{n.imageURL}} class="card-img-top" alt="..." onerror="this.src='../assets/images/unnamed.jpg'" style="width: 320px;height: 430px;">
+     <div *ngFor="let n of bag" class="card col-lg-3 col-md-6 col-sm-6 " style="margin: 3rem;">
+      <img src={{n.imageURL}} class="card-img-top img-thumbnail" alt="..." onerror="this.src='../assets/images/unnamed.jpg'" style="width: 320px;height: 430px;">
       <div class="card-body">
         <h5 class="card-title">{{n.name}}</h5>
         <p class="card-text">{{n.description}}</p>
@@ -133,8 +133,8 @@
    <div *ngIf="decorators.length!=0" class="text-center top-heading"><h1>Decorators</h1></div>
    <div class="row" id="decorators" style="margin-left: 30px;margin-right: 30px;">
 
-     <div *ngFor="let n of decorators" class="card col-lg-3 col-md-6 col-sm-12 " style="margin: 3rem;">
-      <img src={{n.imageURL}} class="card-img-top" alt="..." onerror="this.src='../assets/images/unnamed.jpg';" style="width: 320px;height: 430px;">
+     <div *ngFor="let n of decorators" class="card col-lg-3 col-md-6 col-sm-6 " style="margin: 3rem;">
+      <img src={{n.imageURL}} class="card-img-top img-thumbnail" alt="..." onerror="this.src='../assets/images/unnamed.jpg';" style="width: 320px;height: 430px;">
       <div class="card-body">
         <h5 class="card-title">{{n.name}}</h5>
         <p class="card-text">{{n.description}}</p>
