--- a/Angular/src/app/Webcomponent/signup/signup.component.html
+++ b/Angular/src/app/Webcomponent/signup/signup.component.html
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <!-- <label for="conform_password">Confirm Password : </label> -->
-                <input type="password" name="conform_password" class="form-control" placeholder="confirm password" [(ngModel)]="temp" #conform_password="ngModel" required>
+                <input type="password" name="conform_password" class="form-control" placeholder="confinrm password" [(ngModel)]="temp" #conform_password="ngModel" required>
                 <div *ngIf="temp!=form.password && conform_password.touched" style="color: red;">Password didnt match</div>
               </div>
             <div class="text-center">
